# HardwareInfo

./: Makefile.am  README.md  configure.ac
HardwareInfo/: hardwareinfo.c  hardwareinfo.h
HardwareInfo/lib/: Makefile.am  _hardareinfo.c  hardareinfo.c  test.py
